# monopoly

./: CMakeLists.txt  README.md  log-computer.txt  log-human.txt
include/: Cell.h  Computer.h  Game.h  GameBoard.h  Human.h  Player.h
src/: Cell.cpp  Computer.cpp  Game.cpp  GameBoard.cpp  Human.cpp  Player.cpp  main.cpp
